# data_aggregator

./: Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: README.md
backend/app/: __init__.py  aggregator.py  api.py  config.py  database.py  main.py  models.py  repository.py  scheduler.py  schemas.py
backend/app/adapters/: __init__.py  coincap.py  factory.py  openmeteo.py
backend/app/endpoint_handlers/: get_data_handler.py
backend/tests/: conftest.py
backend/tests/unit/: test_openmeteo_adapter.py  test_repository.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AggregatesPanel.tsx  DataTable.tsx  SourceSelector.tsx
frontend/src/types/: api.ts
